feature: add get course endpoint
